crates/reinhardt-pages/tests/ui/client_form/choices/fail/tuple_variant.rs
use reinhardt_pages::ClientFormChoices;

#[derive(Clone, Default, PartialEq, ClientFormChoices)]
enum ProviderMode {
	#[default]
	Fake,
	Live(String),
}

fn main() {}
